--- a/storage/schemadb/Cargo.toml
+++ b/storage/schemadb/Cargo.toml
@@ -8,10 +8,11 @@ edition = "2018"
 
 [dependencies]
 failure = { path = "../../common/failure_ext", package = "failure_ext" }
+rocksdb = "0.13.0"
 
-[dependencies.rocksdb]
-git = "https://github.com/pingcap/rust-rocksdb.git"
-rev = "4f8c6b3a48c7acb0c81f9bb91e7d8493b1c5a73e"
+#[dependencies.rocksdb]
+#git = "https://github.com/pingcap/rust-rocksdb.git"
+#rev = "4f8c6b3a48c7acb0c81f9bb91e7d8493b1c5a73e"
 
 [dev-dependencies]
 byteorder = "1.3.1"
